--- a/css/greeting.css
+++ b/css/greeting.css
@@ -15,23 +15,37 @@ html, body {
   bottom: 0; left: 0; right: 0;
 }
 
-h1,h2,h3,h4,h5 {
+.greeting h1,h2,h3,h4,h5 {
   text-align: center;  
   letter-spacing: 0;
   /*font-family: 'Myriad Pro',Helvetica,Arial,sans-serif;*/
   padding: 0;
-  color: #999;
+  color: #BBB;
   /*font-weight: 700;*/
   /*font-size: 22px;*/
   /*font-weight: 500;*/
   line-height: 1.1;
-  margin-bottom: 70px;
+  margin: 0px;
 }
 
 .masthead {
-  margin-bottom: 0px;
+  margin-bottom: 00px;
 }
 
+.greeting {
+  margin-bottom: 70px;
+}
 .greeting p {
   text-align: center;
+}
+
+.post {
+  text-align: center;
+}
+
+.post .date {
+  margin-left: -10px;
+  font-size: small;
+  padding: 6px;
+  color: #999; 
 }
