--- a/css/greeting.css
+++ b/css/greeting.css
@@ -1,13 +1,16 @@
-
 html, body {
-  background: #FFF;
-  color: #666;
-  font-family: 'Myriad Pro',Helvetica,Arial,sans-serif;
   font-size: 18px;
-  margin: 0;
-  padding: 0;
-  font-smoothing: antialiased;
-  line-height: 1.7em;
+}
+
+
+a {
+  color: #666;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #666;
+  text-decoration: underline;
 }
 
 .footer {
@@ -17,7 +20,6 @@ html, body {
 
 .greeting h1,h2,h3,h4,h5 {
   text-align: center;  
-  letter-spacing: 0;
   /*font-family: 'Myriad Pro',Helvetica,Arial,sans-serif;*/
   padding: 0;
   color: #BBB;
@@ -45,7 +47,7 @@ html, body {
 
 .post .date {
   margin-left: -10px;
-  font-size: small;
+  font-size: 14px;
   padding: 6px;
-  color: #999; 
+  color: #666; 
 }
