--- a/css/default.css
+++ b/css/default.css
@@ -169,7 +169,7 @@ ul {
 }
 .back-button a {
   text-decoration: none;
-  color: #CCC;
+  color: #AAA;
   font-size: small;
 }
 
@@ -183,6 +183,7 @@ ul {
 
 
 .footer {
+  margin-top: 30px;
   position: relative;
 }
 
@@ -194,8 +195,8 @@ ul {
 }
 
 .footer *, .footer *:hover {
-  font-size: .8em;
-  color: #CCC;
+  font-size: .9em;
+  color: #AAA;
 }
 
 .footer a, .footer:hover a {
